      background, and the progress bar can be resumed by choosing "send" again.
    
v2.6

    - Force quit of the application when calling quit.
      This should solve the issue about drawing battery even when closing the app.
      
v2.7

    - Also shows closed wifis count on statistics.
    - Shows last running dates for application and service on statistics.
    - Show last catched wifis since the last service run on statistics.

v2.8

    - XML export now has colored dots depending of WiFis security methods.

v2.9

	- Sending to online database now only sends open wifis.
	- Asks the user to send all WiFis to online db, or to send only new ones.

v2.10

	- Shows yellow for WEP wifis.
	- When service is stopped or started only a toast is displayed, and not any
	  other notifications (users couldn't delete the notification).

v2.11

	- KML export now writes also timestamp
	
v2.12

	- Sounds and vibrates with notification (auto-cancelable) when spotting a new
	  WiFi. Doesn't notify when a WiFi is only updated, only when newly added.
	  
v2.13

    - Service can be better controlled by either diabling the notifications or
      by setting the GPS query interval.
      
      
v2.14

    - Service start stop wasn't correctly notificating with toast messaged. 

v2.14

    - Unexpected service behaviour 

v2.16

    - Added readable date in the KML export

v2.17

    - Added a regexp filter for visible wifis

v2.18

    - Android SDK version required grows from 3 to 4, Now supports any screen format

v2.19

    - Fixed bug: couldn't write new files on sdcard, corrected permissions.
    
v3.0

    - All actually visible wifis can now be listed
    - Possible operations on single item: delete

v3.1

	- Added the scale bar

v3.2

	- Adding support for posting directly to wigle.net
	
v3.3

	- Added chinese translations

v3.4

	- Added progress bar for KML exporting

v3.5

	- Added translations for German
	- Updated translations for Polish
	